--- a/ai-service/env.sample
+++ b/ai-service/env.sample
@@ -10,7 +10,9 @@ USE_GEMINI=true
 # MODEL_NAME=gpt-3.5-turbo
 
 # Cross-database connection: connect to one schema you have SELECT on (e.g. product_db)
-MYSQL_URL=mysql+pymysql://reader:reader@localhost:3306/product_db
+# For Docker: use 172.17.0.1 (Docker host IP)
+# For local development: use localhost
+MYSQL_URL=mysql+pymysql://reader:reader@172.17.0.1:3306/product_db
 
 # RAG data paths
 DOCS_DIR=./data/docs
