--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -55,11 +55,19 @@ app.jwt.secret=${JWT_SECRET:smartRetailJwtSecretKey_ChangeMe_ToA32BytesMin_Stron
 app.jwt.expiration=86400000
 
 # Service URLs (via API Gateway)
-app.api-gateway.url=http://localhost:8085
-app.product-service.url=http://localhost:8085
-app.customer-service.url=http://localhost:8085
-app.promotion-service.url=http://localhost:8085
-app.inventory-service.url=http://localhost:8085
+# These can be overridden via environment variables for Docker deployment
+# In Docker, use service names like: http://api-gateway:8085
+app.api-gateway.url=${API_GATEWAY_URL:http://localhost:8085}
+app.product-service.url=${PRODUCT_SERVICE_URL:http://localhost:8085}
+app.customer-service.url=${CUSTOMER_SERVICE_URL:http://localhost:8085}
+app.promotion-service.url=${PROMOTION_SERVICE_URL:http://localhost:8085}
+app.inventory-service.url=${INVENTORY_SERVICE_URL:http://localhost:8085}
+
+# Feign Client URLs (used by @FeignClient annotations)
+product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8085}
+promotion.service.url=${PROMOTION_SERVICE_URL:http://localhost:8085}
+inventory.service.url=${INVENTORY_SERVICE_URL:http://localhost:8085}
+user.service.url=${USER_SERVICE_URL:http://localhost:8085}
 
 # Email Configuration (SMTP)
 # IMPORTANT: Set email credentials via environment variables for production
