--- a/promotion-service/src/main/resources/application.properties
+++ b/promotion-service/src/main/resources/application.properties
@@ -46,7 +46,9 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
 
 # API Gateway Configuration
-app.api-gateway.url=http://localhost:8085
+# Can be overridden via environment variable for Docker deployment
+# In Docker, use service names like: http://api-gateway:8085
+app.api-gateway.url=${API_GATEWAY_URL:http://localhost:8085}
 app.product-service.path=/api/products
 app.user-service.path=/api/users
 app.inventory-service.path=/api/inventory
