--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Gateway and Customer-service integration
-app.api-gateway.url=http://localhost:8085
+# Can be overridden via environment variable for Docker deployment
+# In Docker, use service names like: http://api-gateway:8085
+app.api-gateway.url=${API_GATEWAY_URL:http://localhost:8085}
 app.customer-service.path=/api/customers/provision
 server.port=8082
 spring.application.name=user-service
