--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -68,6 +68,7 @@ product.service.url=${PRODUCT_SERVICE_URL:http://localhost:8085}
 promotion.service.url=${PROMOTION_SERVICE_URL:http://localhost:8085}
 inventory.service.url=${INVENTORY_SERVICE_URL:http://localhost:8085}
 user.service.url=${USER_SERVICE_URL:http://localhost:8085}
+customer.service.url=${CUSTOMER_SERVICE_URL:http://localhost:8085}
 
 # Email Configuration (SMTP)
 # IMPORTANT: Set email credentials via environment variables for production
