--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Discovery Server
   discovery-server:
@@ -190,7 +188,7 @@ services:
     env_file:
       - ./ai-service/.env
     environment:
-      - MYSQL_URL=${MYSQL_URL}
+      - MYSQL_URL=mysql+pymysql://reader:reader@172.17.0.1:3306/product_db
     networks:
       - smart-retail-network
     restart: unless-stopped
